--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Sophie Inventory App Part One</string>
+    <string name="app_name">Sophie Inventory App Part Two</string>
     <string name="action_settings">Settings</string>
     <string name="category_overview">Overview</string>
     <string name="hint_product_name">Product Name</string>
@@ -16,7 +16,21 @@
     <string name="action_saved">Save</string>
     <string name="action_deleted">Delete</string>
     <string name="editor_title_new_inventory">Add Inventory</string>
+    <string name="editor_title_edit">Edit Product Here</string>
     <string name="editor_activity_title_new_product">Add inventory here</string>
     <string name="editor_insert_inventory_fail">Inventory has not been added</string>
     <string name="editor_insert_inventory_success">Inventory has been added successfully!</string>
+    <string name="empty_view_title_text">It\'s a bit lonely here.</string>
+    <string name="empty_view_subtitle_text">Get started by adding a product!</string>
+    <string name="editor_update_pet_fail">Updated failed</string>
+    <string name="editor_update_pet_success">Update complete</string>
+    <string name="unsaved_changes_dialog_mag">Not saved</string>
+    <string name="discard">Getting rid of it</string>
+    <string name="keep_editing">Keep Editing</string>
+    <string name="delete_dialog_msg">Has been deleted</string>
+    <string name="delete">Deleted</string>
+    <string name="cancel">Cancelled</string>
+    <string name="editor_delete_inventory_fail">Inventory failed to update</string>
+    <string name="editor_delete_pet_success">Inventory successfully deleted</string>
+
 </resources>
