--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,9 +27,9 @@
     <string name="unsaved_changes_dialog_mag">Not saved</string>
     <string name="discard">Discard</string>
     <string name="keep_editing">Keep Editing</string>
-    <string name="delete_dialog_msg">Has been deleted</string>
-    <string name="delete">Deleted</string>
-    <string name="cancel">Cancelled</string>
+    <string name="delete_dialog_msg">Are you sure you want to delete this?</string>
+    <string name="delete">Delete</string>
+    <string name="cancel">No</string>
     <string name="editor_delete_inventory_fail">Inventory failed to update</string>
     <string name="editor_delete_pet_success">Inventory successfully deleted</string>
     <string name="buttonFloat">Click Here!</string>
